Created page with "* [[Workarounds|Náhradní řešení]] * [[Migrating_to_FreeCAD_from_Fusion360|Přechod z Fusion360 na FreeCAD]] * [[Migrating_to_FreeCAD_from_OnShape|Přechod z OnShape na FreeCAD]] * [[Migrating_to_FreeCAD_from_SolidWorks|Přechod z programu SolidWorks na FreeCAD]] * [[Migrating_to_FreeCAD_from_Revit|Přechod z Revitu na FreeCAD]] * [https://yorik.uncreated.net/blog/2020-010-freecad-bim-guide Průvodce migrací FreeCAD BIM] * BIM_application_compatibility_table|Tabul..."

--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -50,20 +50,16 @@
 <p><span id="Migrating_from_other_software?"></span>
 </p>
 <h4><span id="P.C5.99ech.C3.A1z.C3.ADte_z_jin.C3.A9ho_softwaru.3F"></span><span class="mw-headline" id="P&#345;ech&aacute;z&iacute;te_z_jin&eacute;ho_softwaru?">P&#345;ech&aacute;z&iacute;te z jin&eacute;ho softwaru?</span></h4>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><a href="../Workarounds.html" title="Workarounds">Workarounds</a></li>
-<li><a href="../Migrating_to_FreeCAD_from_Fusion360.html" title="Migrating to FreeCAD from Fusion360">Migrating to FreeCAD from Fusion360</a></li>
-<li><a href="../Migrating_to_FreeCAD_from_OnShape.html" title="Migrating to FreeCAD from OnShape">Migrating to FreeCAD from OnShape</a></li>
-<li><a href="../Migrating_to_FreeCAD_from_SolidWorks.html" title="Migrating to FreeCAD from SolidWorks">Migrating to FreeCAD from SolidWorks</a></li>
-<li><a href="../Migrating_to_FreeCAD_from_Revit.html" title="Migrating to FreeCAD from Revit">Migrating to FreeCAD from Revit</a></li>
-<li><a rel="nofollow" class="external text" href="https://yorik.uncreated.net/blog/2020-010-freecad-bim-guide">FreeCAD BIM migration guide</a></li>
-<li><a href="../BIM_application_compatibility_table.html" title="BIM application compatibility table">BIM applications compatibility table</a></li></ul>
-</div>
+<ul><li><a href="../Workarounds.html" title="Workarounds">N&aacute;hradn&iacute; &#345;e&scaron;en&iacute;</a></li>
+<li><a href="../Migrating_to_FreeCAD_from_Fusion360.html" title="Migrating to FreeCAD from Fusion360">P&#345;echod z Fusion360 na FreeCAD</a></li>
+<li><a href="../Migrating_to_FreeCAD_from_OnShape.html" title="Migrating to FreeCAD from OnShape">P&#345;echod z OnShape na FreeCAD</a></li>
+<li><a href="../Migrating_to_FreeCAD_from_SolidWorks.html" title="Migrating to FreeCAD from SolidWorks">P&#345;echod z programu SolidWorks na FreeCAD</a></li>
+<li><a href="../Migrating_to_FreeCAD_from_Revit.html" title="Migrating to FreeCAD from Revit">P&#345;echod z Revitu na FreeCAD</a></li>
+<li><a rel="nofollow" class="external text" href="https://yorik.uncreated.net/blog/2020-010-freecad-bim-guide">Pr&#367;vodce migrac&iacute; FreeCAD BIM</a></li>
+<li><a href="../BIM_application_compatibility_table.html" title="BIM application compatibility table">Tabulka kompatibility aplikac&iacute; BIM</a></li></ul>
 <p><span id="Basic_application"></span>
 </p>
-<div class="mw-translate-fuzzy">
 <h3><span id="Z.C3.A1klady_aplikace"></span><span class="mw-headline" id="Z&aacute;klady_aplikace">Z&aacute;klady aplikace</span></h3>
-</div>
 <div class="mw-translate-fuzzy">
 <ul><li><a href="../cs/Mouse_Model.html" class="mw-redirect" title="Mouse Model/cs">Model my&scaron;i</a>: Pou&#382;it&iacute; my&scaron;i k navigaci ve 3D prostoru</li>
 <li><a href="../cs/Document_structure.html" title="Document structure/cs">Struktura dokumentu</a>: Jak je organizov&aacute;n dokument FreeCADu</li>
@@ -219,13 +215,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115154307
+Cached time: 20260115154839
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.128 seconds
-Real time usage: 0.369 seconds
-Preprocessor visited node count: 314/1000000
+CPU time usage: 0.127 seconds
+Real time usage: 0.205 seconds
+Preprocessor visited node count: 312/1000000
 Post&#8208;expand include size: 6600/2097152 bytes
 Template argument size: 2004/2097152 bytes
 Highest expansion depth: 5/100
@@ -235,17 +231,17 @@ Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.079      1 -total
- 21.87%    6.578      2 Template:VersionMinus
- 18.83%    5.663      5 Template:Incode
- 18.41%    5.537      1 Template:Userdocnavi/cs
- 17.52%    5.270      1 Template:TOCright
- 13.56%    4.078      3 Template:Version
-  7.28%    2.189      1 Template:Navigation_menu_2
-  4.76%    1.431      1 Template:Button
+100.00%   34.335      1 -total
+ 40.19%   13.800      3 Template:Version
+ 21.25%    7.295      1 Template:Userdocnavi/cs
+ 10.53%    3.617      2 Template:VersionMinus
+ 10.43%    3.582      1 Template:Button
+  9.45%    3.244      5 Template:Incode
+  8.83%    3.031      1 Template:Navigation_menu_2
+  4.02%    1.381      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115154307 and revision id 1738755. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115154839 and revision id 1738759. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
