--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -60,19 +60,15 @@
 <p><span id="Basic_application"></span>
 </p>
 <h3><span id="Z.C3.A1klady_aplikace"></span><span class="mw-headline" id="Z&aacute;klady_aplikace">Z&aacute;klady aplikace</span></h3>
-<div class="mw-translate-fuzzy">
-<ul><li><a href="../cs/Mouse_Model.html" class="mw-redirect" title="Mouse Model/cs">Model my&scaron;i</a>: Pou&#382;it&iacute; my&scaron;i k navigaci ve 3D prostoru</li>
-<li><a href="../cs/Document_structure.html" title="Document structure/cs">Struktura dokumentu</a>: Jak je organizov&aacute;n dokument FreeCADu</li>
-<li><a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Volby</a> a <a href="../cs/Interface_Customization.html" title="Interface Customization/cs">p&#345;izp&#367;soben&iacute;</a>: Jak nakonfigurujete FreeCAD pro Va&scaron;e pot&#345;eby</li>
-<li><a href="../cs/Property_editor.html" class="mw-redirect" title="Property editor/cs">Vlastnosti</a>: Jak funguj&iacute; vlastnosti objket&#367; ve FreeCADu</li>
-<li><a href="../Workbenches.html" title="Workbenches">Workbench Concept/cs|Pracovn&iacute; plocha</a>: Jak je organizov&aacute;no prost&#345;ed&iacute; FreeCADu</li>
-<li><a href="../cs/Macros.html" title="Macros/cs">Makra</a>: Jak snadno zautomatizovat &#269;asto opakovan&eacute; &uacute;lohy</li></ul>
-</div>
+<ul><li><a href="../Interface.html" title="Interface">U&#382;ivatelsk&eacute; rozhran&iacute;</a>: u&#382;ivatelsk&eacute; rozhran&iacute; FreeCADu se skl&aacute;d&aacute; z r&#367;zn&yacute;ch grafick&yacute;ch prvk&#367; na obrazovce, v&#269;etn&#283; <a href="../3D_view.html" class="mw-redirect" title="3D view">3D zobrazen&iacute;</a>, <a href="../Tree_view.html" class="mw-redirect" title="Tree view">stromov&eacute;ho zobrazen&iacute;</a>, <a href="../Property_editor.html" class="mw-redirect" title="Property editor">editoru vlastnost&iacute;</a>, <a href="../Task_panel.html" class="mw-redirect" title="Task panel">panelu &uacute;kol&#367;</a> a <a href="../Python_console.html" class="mw-redirect" title="Python console">Python konsole</a>.</li>
+<li><a href="../Mouse_navigation.html" title="Mouse navigation">Navigace my&scaron;&iacute;</a>: r&#367;zn&eacute; zp&#367;soby pou&#382;&iacute;v&aacute;n&iacute; my&scaron;i nebo trackpadu k navigaci ve 3D pohledu.</li>
+<li><a href="../Selection_methods.html" title="Selection methods">Metody v&yacute;b&#283;ru</a>: r&#367;zn&eacute; metody v&yacute;b&#283;ru objekt&#367; v softwaru.</li>
+<li><a href="../Object_name.html" title="Object name">Pojmenov&aacute;n&iacute; objekt&#367;</a>: Objekty FreeCADu maj&iacute; pouze pro &#269;ten&iacute; <code>Name</code>, kter&eacute; je jednozna&#269;n&#283; identifikuje a <code>Label</code>, kter&eacute; m&#367;&#382;e u&#382;ivatel upravovat.</li>
+<li><a href="../Preferences_Editor.html" title="Preferences Editor">Editor p&#345;edvoleb</a>: syst&eacute;m, kter&yacute; umo&#382;&#328;uje ovl&aacute;dat mnoho vlastnost&iacute; z&aacute;kladn&iacute;ho syst&eacute;mu a jednotliv&yacute;ch pracovn&iacute;ch ploch.</li>
+<li><a href="../Import_Export.html" title="Import Export">Form&aacute;ty soubor&#367;</a>: r&#367;zn&eacute; form&aacute;ty soubor&#367;, kter&eacute; FreeCAD um&iacute; &#269;&iacute;st a zapisovat.</li></ul>
 <p><span id="Workbenches"></span>
 </p>
-<div class="mw-translate-fuzzy">
 <h3><span id="Pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Pracovn&iacute;_plochy">Pracovn&iacute; plochy</span></h3>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><a href="../Workbenches.html" title="Workbenches">Workbenches</a> are collections of tools used for specific tasks. The workbenches listed below are bundled with every FreeCAD installation.
 </p>
@@ -215,15 +211,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115154839
+Cached time: 20260115155548
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.127 seconds
-Real time usage: 0.205 seconds
-Preprocessor visited node count: 312/1000000
-Post&#8208;expand include size: 6600/2097152 bytes
-Template argument size: 2004/2097152 bytes
+CPU time usage: 0.114 seconds
+Real time usage: 0.169 seconds
+Preprocessor visited node count: 326/1000000
+Post&#8208;expand include size: 6635/2097152 bytes
+Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -231,17 +227,17 @@ Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.335      1 -total
- 40.19%   13.800      3 Template:Version
- 21.25%    7.295      1 Template:Userdocnavi/cs
- 10.53%    3.617      2 Template:VersionMinus
- 10.43%    3.582      1 Template:Button
-  9.45%    3.244      5 Template:Incode
-  8.83%    3.031      1 Template:Navigation_menu_2
-  4.02%    1.381      1 Template:TOCright
+100.00%   19.972      1 -total
+ 40.94%    8.176      1 Template:Userdocnavi/cs
+ 15.14%    3.024      7 Template:Incode
+ 14.01%    2.798      1 Template:Navigation_menu_2
+ 10.59%    2.115      1 Template:TOCright
+  9.98%    1.993      3 Template:Version
+  9.09%    1.816      1 Template:Button
+  8.08%    1.614      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115154839 and revision id 1738759. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115155547 and revision id 1738763. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
