--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -69,10 +69,8 @@
 <p><span id="Workbenches"></span>
 </p>
 <h3><span id="Pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Pracovn&iacute;_plochy">Pracovn&iacute; plochy</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><a href="../Workbenches.html" title="Workbenches">Workbenches</a> are collections of tools used for specific tasks. The workbenches listed below are bundled with every FreeCAD installation.
+<p><a href="../Workbenches.html" title="Workbenches">Pracovn&iacute; plochy</a> jsou sady n&aacute;stroj&#367; pou&#382;&iacute;van&yacute;ch pro konkr&eacute;tn&iacute; &uacute;koly. N&iacute;&#382;e uveden&eacute; pracovn&iacute; plochy jsou sou&#269;&aacute;st&iacute; ka&#382;d&eacute; instalace FreeCADu.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: Some rarely used workbenches are disabled by default. These are marked with <code>D</code> below. A disabled workbench can be enabled in the <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">preferences</a>. Disabled workbenches can still be activated via the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> menu of <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench selector</a>.
 </p>
@@ -211,13 +209,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115155548
+Cached time: 20260115155744
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.114 seconds
-Real time usage: 0.169 seconds
-Preprocessor visited node count: 326/1000000
+CPU time usage: 0.122 seconds
+Real time usage: 0.260 seconds
+Preprocessor visited node count: 325/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -227,17 +225,17 @@ Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.972      1 -total
- 40.94%    8.176      1 Template:Userdocnavi/cs
- 15.14%    3.024      7 Template:Incode
- 14.01%    2.798      1 Template:Navigation_menu_2
- 10.59%    2.115      1 Template:TOCright
-  9.98%    1.993      3 Template:Version
-  9.09%    1.816      1 Template:Button
-  8.08%    1.614      2 Template:VersionMinus
+100.00%   18.231      1 -total
+ 35.06%    6.392      1 Template:Userdocnavi/cs
+ 17.73%    3.233      7 Template:Incode
+ 14.65%    2.671      1 Template:TOCright
+ 13.86%    2.527      1 Template:Navigation_menu_2
+  8.91%    1.625      3 Template:Version
+  8.80%    1.604      2 Template:VersionMinus
+  8.65%    1.577      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115155547 and revision id 1738763. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115155744 and revision id 1738765. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
