--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -70,7 +70,7 @@
 </p>
 <h3><span id="Pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Pracovn&iacute;_plochy">Pracovn&iacute; plochy</span></h3>
 <p><a href="../Workbenches.html" title="Workbenches">Pracovn&iacute; plochy</a> jsou sady n&aacute;stroj&#367; pou&#382;&iacute;van&yacute;ch pro konkr&eacute;tn&iacute; &uacute;koly. N&iacute;&#382;e uveden&eacute; pracovn&iacute; plochy jsou sou&#269;&aacute;st&iacute; ka&#382;d&eacute; instalace FreeCADu.
-</p><p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: N&#283;kter&eacute; z&#345;&iacute;dka pou&#382;&iacute;van&eacute; pracovn&iacute; plochy jsou ve v&yacute;choz&iacute;m nastaven&iacute; deaktivov&aacute;ny. Ty jsou n&iacute;&#382;e ozna&#269;eny <code>D</code>. Deaktivovanou pracovn&iacute; plochu lze aktivovat v <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">P&#345;edvolb&aacute;ch</a>. Deaktivovan&eacute; pracovn&iacute; plochy lze st&aacute;le aktivovat pomoc&iacute; menu <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> <a href="../Std_Workbench.html" title="Std Workbench">panelu V&yacute;b&#283;ru pracovn&iacute;ho prost&#345;ed&iacute;</a>.
+</p><p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: N&#283;kter&eacute; z&#345;&iacute;dka pou&#382;&iacute;van&eacute; pracovn&iacute; plochy jsou ve v&yacute;choz&iacute;m nastaven&iacute; deaktivov&aacute;ny. Ty jsou n&iacute;&#382;e ozna&#269;eny <code>D</code>. Deaktivovanou pracovn&iacute; plochu lze aktivovat v <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">P&#345;edvolb&aacute;ch</a>. Deaktivovan&eacute; pracovn&iacute; plochy lze st&aacute;le aktivovat pomoc&iacute; menu <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> <a href="../Std_Workbench.html" title="Std Workbench">panelu v&yacute;b&#283;ru pracovn&iacute;ho prost&#345;ed&iacute;</a>.
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Standard tools</a>. These commands and tools are present in all workbenches.</li></ul>
@@ -206,12 +206,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115160145
+Cached time: 20260115160250
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.114 seconds
-Real time usage: 0.243 seconds
+CPU time usage: 0.108 seconds
+Real time usage: 0.164 seconds
 Preprocessor visited node count: 324/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
@@ -222,17 +222,17 @@ Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.690      1 -total
- 43.00%    5.887      1 Template:Userdocnavi/cs
- 16.30%    2.231      1 Template:Navigation_menu_2
- 15.25%    2.088      1 Template:TOCright
- 10.24%    1.402      7 Template:Incode
-  9.86%    1.350      2 Template:VersionMinus
-  8.44%    1.156      3 Template:Version
-  7.30%    0.999      1 Template:Button
+100.00%   13.524      1 -total
+ 36.18%    4.893      1 Template:Userdocnavi/cs
+ 16.77%    2.268      1 Template:TOCright
+ 15.61%    2.111      1 Template:Navigation_menu_2
+ 12.86%    1.739      7 Template:Incode
+ 11.85%    1.602      3 Template:Version
+  8.05%    1.089      1 Template:Button
+  7.36%    0.995      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115160144 and revision id 1738767. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115160249 and revision id 1738769. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
