--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -75,8 +75,8 @@
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Standard tools</a>. These commands and tools are present in all workbenches.</li></ul>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Assembly_Workbench.html" title="Assembly Workbench">Assembly Workbench</a> for building and solving mechanical assemblies. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
+<div class="mw-translate-fuzzy">
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> [[Assembly_Workbench|Pracovn&iacute; pro vytv&aacute;&#345;en&iacute; a &#345;e&scaron;en&iacute; mechanick&yacute;ch sestav. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 </div>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Workbench.html" title="BIM Workbench">Pracovn&iacute; plocha BIM</a> pro pr&aacute;ci s architektonick&yacute;mi prvky a vytv&aacute;&#345;en&iacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a> model&#367;. Kombinuje Arch Workbench a d&#345;&iacute;ve extern&iacute; BIM Workbench, kter&yacute; byl k dispozici ve <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -204,13 +204,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115160855
+Cached time: 20260115161100
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.117 seconds
-Real time usage: 0.290 seconds
-Preprocessor visited node count: 323/1000000
+CPU time usage: 0.119 seconds
+Real time usage: 0.215 seconds
+Preprocessor visited node count: 274/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -220,17 +220,17 @@ Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.806      1 -total
- 56.27%   19.587      1 Template:Userdocnavi/cs
- 16.01%    5.574      1 Template:Navigation_menu_2
- 13.09%    4.557      2 Template:VersionMinus
-  6.45%    2.244      7 Template:Incode
-  5.71%    1.986      3 Template:Version
-  5.42%    1.886      1 Template:TOCright
-  4.85%    1.689      1 Template:Button
+100.00%   18.993      1 -total
+ 51.04%    9.694      1 Template:Userdocnavi/cs
+ 29.29%    5.563      1 Template:Navigation_menu_2
+  9.15%    1.738      7 Template:Incode
+  8.83%    1.678      1 Template:TOCright
+  8.72%    1.656      3 Template:Version
+  8.31%    1.579      2 Template:VersionMinus
+  8.01%    1.521      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115160855 and revision id 1738771. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115161100 and revision id 1738773. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
