--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -73,9 +73,7 @@
 </p><p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: N&#283;kter&eacute; z&#345;&iacute;dka pou&#382;&iacute;van&eacute; pracovn&iacute; plochy jsou ve v&yacute;choz&iacute;m nastaven&iacute; deaktivov&aacute;ny. Ty jsou n&iacute;&#382;e ozna&#269;eny <code>D</code>. Deaktivovanou pracovn&iacute; plochu lze aktivovat v <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">P&#345;edvolb&aacute;ch</a>. Deaktivovan&eacute; pracovn&iacute; plochy lze st&aacute;le aktivovat pomoc&iacute; menu <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> <a href="../Std_Workbench.html" title="Std Workbench">panelu v&yacute;b&#283;ru pracovn&iacute;ho prost&#345;ed&iacute;</a>.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Standardn&iacute; n&aacute;stroje</a>. Tyto p&#345;&iacute;kazy a n&aacute;stroje jsou k dispozici ve v&scaron;ech pracovn&iacute;ch prost&#345;ed&iacute;ch.</li></ul>
-<div class="mw-translate-fuzzy">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> [[Assembly_Workbench|Pracovn&iacute; pro vytv&aacute;&#345;en&iacute; a &#345;e&scaron;en&iacute; mechanick&yacute;ch sestav. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Assembly_Workbench.html" title="Assembly Workbench">Pracovn&iacute; plocha Assembly</a> pro vytv&aacute;&#345;en&iacute; a &#345;e&scaron;en&iacute; mechanick&yacute;ch sestav. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Workbench.html" title="BIM Workbench">Pracovn&iacute; plocha BIM</a> pro pr&aacute;ci s architektonick&yacute;mi prvky a vytv&aacute;&#345;en&iacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a> model&#367;. Kombinuje Arch Workbench a d&#345;&iacute;ve extern&iacute; BIM Workbench, kter&yacute; byl k dispozici ve <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_CAM.svg&amp;filetimestamp=20240316105021&amp;.html" class="mw-file-description"><img src="../File/Workbench_CAM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../CAM_Workbench.html" title="CAM Workbench">CAM Workbench</a> is used to produce G-Code instructions. This workbench was called "Path Workbench" in <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
@@ -202,13 +200,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115161219
+Cached time: 20260115161359
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.140 seconds
-Real time usage: 0.366 seconds
-Preprocessor visited node count: 273/1000000
+CPU time usage: 0.106 seconds
+Real time usage: 0.162 seconds
+Preprocessor visited node count: 321/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -218,17 +216,17 @@ Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.671      1 -total
- 36.07%   15.392      1 Template:Userdocnavi/cs
- 18.99%    8.104      1 Template:Navigation_menu_2
- 17.26%    7.365      3 Template:Version
- 15.91%    6.790      1 Template:Button
- 13.78%    5.881      1 Template:TOCright
-  8.03%    3.425      7 Template:Incode
-  6.16%    2.630      2 Template:VersionMinus
+100.00%   15.026      1 -total
+ 32.78%    4.925      1 Template:Userdocnavi/cs
+ 15.93%    2.394      7 Template:Incode
+ 13.77%    2.069      1 Template:Button
+ 13.35%    2.006      1 Template:TOCright
+ 13.35%    2.006      1 Template:Navigation_menu_2
+  9.64%    1.448      3 Template:Version
+  6.85%    1.030      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115161218 and revision id 1738775. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115161358 and revision id 1738777. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
