Created page with "* [[Image:Workbench_Material.svg|32px]] The [[Material_Workbench|Pracovní plocha Material]] zpracovává systém materiálů FreeCADu. {{Version|1.0}}"

--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -79,9 +79,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Draft_Workbench.html" title="Draft Workbench">Pracovn&iacute; plocha Draft</a> obsahuje 2D n&aacute;stroje a z&aacute;kladn&iacute; 2D a 3D CAD operace.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_FEM.svg&amp;filetimestamp=20240405093343&amp;.html" class="mw-file-description"><img src="../File/Workbench_FEM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../FEM_Workbench.html" title="FEM Workbench">Pracovn&iacute; plocha FEM</a> poskytuje pracovn&iacute; postup pro anal&yacute;zu kone&#269;n&yacute;ch prvk&#367; (FEA).</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Inspection.svg&amp;filetimestamp=20200404172947&amp;.html" class="mw-file-description"><img src="../File/Workbench_Inspection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Inspection_Workbench.html" title="Inspection Workbench">Pracovn&iacute; plocha Inspection</a> je vytvo&#345;ena tak, aby v&aacute;m poskytla konkr&eacute;tn&iacute; n&aacute;stroje pro zkoum&aacute;n&iacute; tvar&#367;. St&aacute;le se nach&aacute;z&iacute; v ran&eacute; f&aacute;zi v&yacute;voje. <code>D</code></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Material.svg&amp;filetimestamp=20240623140009&amp;.html" class="mw-file-description"><img src="../File/Workbench_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Material_Workbench.html" title="Material Workbench">Material Workbench</a> handles the FreeCAD material system. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Material.svg&amp;filetimestamp=20240623140009&amp;.html" class="mw-file-description"><img src="../File/Workbench_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Material_Workbench.html" title="Material Workbench">Pracovn&iacute; plocha Material</a> zpracov&aacute;v&aacute; syst&eacute;m materi&aacute;l&#367; FreeCADu. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Mesh.svg&amp;filetimestamp=20200404173024&amp;.html" class="mw-file-description"><img src="../File/Workbench_Mesh.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Mesh_Workbench.html" title="Mesh Workbench">Mesh Workbench</a> for working with triangulated meshes.</li></ul>
 </div>
@@ -192,13 +190,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115162258
+Cached time: 20260115162416
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.114 seconds
-Real time usage: 0.181 seconds
-Preprocessor visited node count: 317/1000000
+CPU time usage: 0.127 seconds
+Real time usage: 0.256 seconds
+Preprocessor visited node count: 316/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -208,17 +206,17 @@ Unstrip post&#8208;expand size: 4294/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.917      1 -total
- 44.12%    6.582      1 Template:Userdocnavi/cs
- 17.16%    2.559      1 Template:Navigation_menu_2
- 11.72%    1.748      2 Template:VersionMinus
- 10.67%    1.591      3 Template:Version
-  9.54%    1.422      7 Template:Incode
-  9.41%    1.404      1 Template:TOCright
-  8.60%    1.283      1 Template:Button
+100.00%   14.722      1 -total
+ 46.74%    6.881      1 Template:Userdocnavi/cs
+ 18.05%    2.658      1 Template:Navigation_menu_2
+ 13.45%    1.980      2 Template:VersionMinus
+ 10.20%    1.502      3 Template:Version
+  8.97%    1.320      7 Template:Incode
+  7.96%    1.172      1 Template:TOCright
+  6.77%    0.997      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115162257 and revision id 1738785. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115162416 and revision id 1738787. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
