Created page with "[[Macros|Makra]] jsou relativně malé fragmenty kódu [[Python|Pythonu]], které provádějí jednoduché nebo složité úkoly, které nejsou dostupné v základním systému programu FreeCAD."

--- a/wiki/cs/User_hub.html
+++ b/wiki/cs/User_hub.html
@@ -95,10 +95,8 @@
 <p><span id="Macros"></span>
 </p>
 <h3><span class="mw-headline" id="Makra">Makra</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><a href="../Macros.html" title="Macros">Macros</a> are relatively small snippets of <a href="../Python.html" title="Python">Python</a> code that perform a simple or a complex task that is not available in the base FreeCAD system.
+<p><a href="../Macros.html" title="Macros">Makra</a> jsou relativn&#283; mal&eacute; fragmenty k&oacute;du <a href="../Python.html" title="Python">Pythonu</a>, kter&eacute; prov&aacute;d&#283;j&iacute; jednoduch&eacute; nebo slo&#382;it&eacute; &uacute;koly, kter&eacute; nejsou dostupn&eacute; v z&aacute;kladn&iacute;m syst&eacute;mu programu FreeCAD.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Power users have written various <a href="../Macros.html" title="Macros">macros</a> to enhance FreeCAD with more capabilities.
 </p>
@@ -166,13 +164,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115163839
+Cached time: 20260115164032
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.152 seconds
-Preprocessor visited node count: 304/1000000
+CPU time usage: 0.107 seconds
+Real time usage: 0.160 seconds
+Preprocessor visited node count: 303/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
 Highest expansion depth: 5/100
@@ -182,17 +180,17 @@ Unstrip post&#8208;expand size: 4295/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.199      1 -total
- 49.79%    8.065      1 Template:Userdocnavi/cs
- 21.35%    3.458      1 Template:Navigation_menu_2
- 12.21%    1.977      7 Template:Incode
-  9.71%    1.573      1 Template:TOCright
-  8.14%    1.319      3 Template:Version
-  7.34%    1.189      1 Template:Button
-  7.03%    1.139      2 Template:VersionMinus
+100.00%   11.252      1 -total
+ 43.93%    4.943      1 Template:Userdocnavi/cs
+ 19.01%    2.139      1 Template:Navigation_menu_2
+ 11.02%    1.240      7 Template:Incode
+ 10.08%    1.134      1 Template:Button
+  9.70%    1.092      1 Template:TOCright
+  9.15%    1.030      2 Template:VersionMinus
+  9.01%    1.014      3 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115163839 and revision id 1738817. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:11484-0!canonical and timestamp 20260115164032 and revision id 1738819. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
