Updated page Std Measure/de

--- a/wiki/de/Std_Measure.html
+++ b/wiki/de/Std_Measure.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Std Measure/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Std+Measure&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Std_Measure.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Std Measure (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Std_Measure.html" class="mw-pt-progress mw-pt-progress--high" title="Std Mesurer (95% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Std_Measure.html" class="mw-pt-progress mw-pt-progress--high" title="Strumenti&#720; Misurare (75% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Std_Measure.html" class="mw-pt-progress mw-pt-progress--high" title="Std: Pomiary (95% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Std_Measure.html" class="mw-pt-progress mw-pt-progress--complete" title="Std: Pomiary (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Std_Measure.html" class="mw-pt-progress mw-pt-progress--med" title="Medida (20% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/Std_Measure.html" class="mw-pt-progress mw-pt-progress--high" title="&#1057;&#1090;&#1072;&#1085;&#1076;&#1072;&#1088;&#1090;&#1085;&#1099;&#1077; &#1048;&#1079;&#1084;&#1077;&#1088;&#1080;&#1090;&#1100; (75% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Std_Measure.html" class="mw-pt-progress mw-pt-progress--med" title="&#27161;&#28310;&#28204;&#23450;&#12484;&#12540;&#12523; (35% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li></ul></div>
@@ -63,13 +63,12 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Optional die zu messenden Entit&auml;ten vorab ausw&auml;hlen.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, den Befehl aufzurufen:
 <ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Std_Measure.svg&amp;filetimestamp=20240704211636&amp;.html" class="mw-file-description"><img src="../File/Std_Measure.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Std Messen</a></span> dr&uuml;cken.</li>
 <li>Im Men&uuml; die Option <b>Extras &rarr; <span typeof="mw:File"><a href="../index.php?title=Std_Measure.svg&amp;filetimestamp=20240704211636&amp;.html" class="mw-file-description"><img src="../File/Std_Measure.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Messen</b> w&auml;hlen.</li></ul></li>
 <li>Das Aufgaben-Fenster <b>Messen</b> wird ge&ouml;ffnet. Siehe <a href="#Options">Optionen</a> f&uuml;r weitere Informationen.</li>
-<li>Wenn keine geometrischen Elemente vorausgew&auml;hlt wurden, f&uuml;hren Sie einen der folgenden Schritte aus:
+<li>Wenn keine geometrischen Elemente vorausgew&auml;hlt wurden, einen der folgenden Schritte ausf&uuml;hren:
 <ul><li>Die geometrischen Elemente ausw&auml;hlen, w&auml;hrend der <i>Modus</i> auf <i>Auto</i> belassen wird, damit der Modus automatisch anhand der Auswahl bestimmt wird.</li>
 <li>Einen anderen <i>Modus</i> als <i>Auto</i> w&auml;hlen und dann die geometrischen Elemente ausw&auml;hlen (durch erneutes Anklicken werden sie wieder abgew&auml;hlt):
 <ul><li><i>Abstand</i> &ndash; der k&uuml;rzeste Abstand zwischen den ausgew&auml;hlten Elementen; wenn Kreis-/Bogenkanten ausgew&auml;hlt sind, wird der Abstand zwischen den Mittelpunkten der Kreise/B&ouml;gen gemessen.</li>
@@ -78,12 +77,12 @@
 <li><i>L&auml;nge</i> &ndash; L&auml;nge der ausgew&auml;hlten Kante,</li>
 <li><i>Position</i> &ndash; Koordinaten des ausgew&auml;hlten Scheitelpunkts,</li>
 <li><i>Fl&auml;che</i> &ndash; Fl&auml;che der ausgew&auml;hlten Fl&auml;che,</li>
+<li><i>Durchmesser</i> - <span style="font-size:small;"><a href="../de/Release_notes_1.2.html" title="Release notes 1.2/de">eingef&uuml;hrt in 1.2</a></span>: Durchmesser der ausgew&auml;hlten Kreis-/Bogenkante,</li>
 <li><i>Radius</i> &ndash; Radius der ausgew&auml;hlten Kreis-/Bogenkante,</li>
-<li><i>Massenmittelpunkt</i> &ndash; COM der ausgew&auml;hlten Kante, Fl&auml;che oder des ausgew&auml;hlten Volumenk&ouml;rpers (nur wenn im Baum vorab ausgew&auml;hlt).</li></ul></li></ul></li>
+<li><i>Massenmittelpunkt</i> &ndash; Massenmittelpunkt der ausgew&auml;hlten Kante, Fl&auml;che oder des ausgew&auml;hlten Volumenk&ouml;rpers (nur wenn im Baum vorab ausgew&auml;hlt).</li></ul></li></ul></li>
 <li>Das Messergebnis wird im Feld <i>Ergebnis</i> und auf einer Beschriftung angezeigt, das in der <a href="../de/3D_View.html" title="3D View/de">3D-Ansicht</a> angezeigt wird. Diese Beschriftung enth&auml;lt auch ein Symbol, das die Art der Messung angibt. Die Beschriftungen k&ouml;nnen in den <a href="../de/Preferences_Editor.html" title="Preferences Editor/de">Einstellungen</a> angepasst werden. Sie k&ouml;nnen in der 3D-Ansicht durch Ziehen mit dem Mauszeiger verschoben werden.</li>
 <li>Die Taste <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zur&uuml;cksetzen</span> dr&uuml;cken, um die Messung zu l&ouml;schen, oder die Taste <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Speichern</span>, um sie zu behalten. Gespeicherte Messungen werden in einer <a href="../de/Std_Group.html" title="Std Group/de">Gruppe</a> <i>Measurements</i> (Messungen) in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> abgelegt.</li>
 <li><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> oder die Taste <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Schlie&szlig;en</span> dr&uuml;cken, um den Befehl zu beenden.</li></ol>
-</div>
 <p><span id="Options"></span>
 </p>
 <h2><span class="mw-headline" id="Optionen">Optionen</span></h2>
@@ -184,35 +183,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115095212
+Cached time: 20260115164951
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.118 seconds
-Preprocessor visited node count: 1011/1000000
-Post&#8208;expand include size: 39479/2097152 bytes
-Template argument size: 13149/2097152 bytes
+CPU time usage: 0.108 seconds
+Real time usage: 0.190 seconds
+Preprocessor visited node count: 1018/1000000
+Post&#8208;expand include size: 39560/2097152 bytes
+Template argument size: 13155/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1618/5000000 bytes
+Unstrip post&#8208;expand size: 1627/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.821      1 -total
- 21.58%    8.808      1 Template:Std_Base_navi/de
- 15.91%    6.495      8 Template:PropertyData/de
- 15.30%    6.246     14 Template:Variable
- 12.72%    5.191      2 Template:Navigation_menu_2
-  8.53%    3.484      2 Template:PropertyView
-  7.10%    2.900      2 Template:TitleProperty
-  6.39%    2.608      4 Template:PropertyView/de
-  6.11%    2.493      2 Template:Docnav/de
-  6.07%    2.478      1 Template:Userdocnavi/de
+100.00%   47.383      1 -total
+ 26.39%   12.504      1 Template:Std_Base_navi/de
+ 13.90%    6.588      8 Template:PropertyData/de
+ 13.22%    6.265      2 Template:Navigation_menu_2
+ 12.78%    6.054     14 Template:Variable
+ 11.14%    5.276      4 Template:PropertyView/de
+  8.52%    4.037      2 Template:TitleProperty
+  6.73%    3.188      2 Template:PropertyView
+  4.75%    2.250      1 Template:GuiCommand/de
+  4.21%    1.995     13 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:351675-0!canonical and timestamp 20260115095211 and revision id 1738599. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:351675-0!canonical and timestamp 20260115164951 and revision id 1738837. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
