Created page with ":* [[Image:BIM_Report.svg|32px]] [[BIM_Report/de|BIM Bericht]]: Erstellt einen neuen BIM-Bericht, um Modelldaten mit SQL abzufragen. {{Version/de|1.2}}"

--- a/wiki/de/BIM_Workbench.html
+++ b/wiki/de/BIM_Workbench.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM Workbench/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-BIM+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../BIM_Workbench.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="BIM Workbench (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente de trabajo BIM (93% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/BIM_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Atelier BIM (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -191,9 +191,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Layers.svg&amp;filetimestamp=20240608121601&amp;.html" class="mw-file-description"><img src="../File/BIM_Layers.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/BIM_Layers.html" title="BIM Layers/de">Ebenen</a>: Verwaltet die Ebenen des Dokuments.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Material.svg&amp;filetimestamp=20240608121647&amp;.html" class="mw-file-description"><img src="../File/BIM_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/BIM_Material.html" title="BIM Material/de">Material</a>: Verwaltet die Materialien mittels <a href="../de/Arch_SetMaterial.html" title="Arch SetMaterial/de">MaterialZuordnen</a> oder <a href="../de/Arch_MultiMaterial.html" title="Arch MultiMaterial/de">MehrfachMaterial</a> f&uuml;r ausgew&auml;hlte Objekte</li></ul>
 <ul><li><span id="BIM_ReportTools">Report Tools:</span></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Report.svg&amp;filetimestamp=20251007070453&amp;.html" class="mw-file-description"><img src="../File/BIM_Report.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../BIM_Report.html" title="BIM Report">BIM Report</a>: Creates a new BIM Report to query model data with SQL. <span style="font-size:small;"><a href="../Release_notes_1.2.html" title="Release notes 1.2">introduced in 1.2</a></span></li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Report.svg&amp;filetimestamp=20251007070453&amp;.html" class="mw-file-description"><img src="../File/BIM_Report.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=BIM_Report/de&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Report/de (page does not exist)">BIM Bericht</a>: Erstellt einen neuen BIM-Bericht, um Modelldaten mit SQL abzufragen. <span style="font-size:small;"><a href="../de/Release_notes_1.2.html" title="Release notes 1.2/de">eingef&uuml;hrt in 1.2</a></span></li></ul></dd></dl>
 <div class="mw-translate-fuzzy">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Arch_Schedule.svg&amp;filetimestamp=20250123011709&amp;.html" class="mw-file-description"><img src="../File/Arch_Schedule.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Arch_Schedule.html" title="Arch Schedule/de">Terminplan</a>: Erstellt verschiedene Arten von Terminpl&auml;nen.</li></ul>
 </div>
@@ -370,34 +368,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115165106
+Cached time: 20260115165214
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.404 seconds
-Real time usage: 0.771 seconds
-Preprocessor visited node count: 877/1000000
-Post&#8208;expand include size: 24321/2097152 bytes
+CPU time usage: 0.435 seconds
+Real time usage: 0.651 seconds
+Preprocessor visited node count: 876/1000000
+Post&#8208;expand include size: 24325/2097152 bytes
 Template argument size: 9482/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2101/5000000 bytes
+Unstrip post&#8208;expand size: 2105/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.339      1 -total
- 48.13%   12.678      1 Template:BIM_Tools_navi/de
- 25.32%    6.670      2 Template:Navigation_menu_2
- 11.91%    3.137      7 Template:VersionPlus/de
-  9.82%    2.587      2 Template:Docnav/de
-  9.29%    2.447      1 Template:Userdocnavi/de
-  5.52%    1.453      1 Template:MenuCommand
-  5.03%    1.326      1 Template:Version
-  4.39%    1.157      1 Template:TOCright
+100.00%   40.326      1 -total
+ 35.65%   14.376      1 Template:BIM_Tools_navi/de
+ 17.13%    6.908      1 Template:TOCright
+ 14.24%    5.742      2 Template:Navigation_menu_2
+ 12.39%    4.997      2 Template:Docnav/de
+ 10.24%    4.128      7 Template:VersionPlus/de
+  8.87%    3.576      1 Template:Version/de
+  7.05%    2.844      1 Template:Userdocnavi/de
+  4.44%    1.789      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:181417-0!canonical and timestamp 20260115165105 and revision id 1738839. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:181417-0!canonical and timestamp 20260115165213 and revision id 1738843. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
