Updated page BIM Workbench/de

--- a/wiki/de/BIM_Workbench.html
+++ b/wiki/de/BIM_Workbench.html
@@ -192,9 +192,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Material.svg&amp;filetimestamp=20240608121647&amp;.html" class="mw-file-description"><img src="../File/BIM_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/BIM_Material.html" title="BIM Material/de">Material</a>: Verwaltet die Materialien mittels <a href="../de/Arch_SetMaterial.html" title="Arch SetMaterial/de">MaterialZuordnen</a> oder <a href="../de/Arch_MultiMaterial.html" title="Arch MultiMaterial/de">MehrfachMaterial</a> f&uuml;r ausgew&auml;hlte Objekte</li></ul>
 <ul><li><span id="BIM_ReportTools">Report Tools:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Report.svg&amp;filetimestamp=20251007070453&amp;.html" class="mw-file-description"><img src="../File/BIM_Report.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=BIM_Report/de&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Report/de (page does not exist)">BIM Bericht</a>: Erstellt einen neuen BIM-Bericht, um Modelldaten mit SQL abzufragen. <span style="font-size:small;"><a href="../de/Release_notes_1.2.html" title="Release notes 1.2/de">eingef&uuml;hrt in 1.2</a></span></li></ul></dd></dl>
-<div class="mw-translate-fuzzy">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Arch_Schedule.svg&amp;filetimestamp=20250123011709&amp;.html" class="mw-file-description"><img src="../File/Arch_Schedule.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Arch_Schedule.html" title="Arch Schedule/de">Terminplan</a>: Erstellt verschiedene Arten von Terminpl&auml;nen.</li></ul>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Arch_Schedule.svg&amp;filetimestamp=20250123011709&amp;.html" class="mw-file-description"><img src="../File/Arch_Schedule.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Arch_Schedule.html" title="Arch Schedule/de">Terminplan</a>: Erstellt verschiedene Arten von Terminpl&auml;nen.</li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=BIM_Preflight.svg&amp;filetimestamp=20240608121802&amp;.html" class="mw-file-description"><img src="../File/BIM_Preflight.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/BIM_Preflight.html" title="BIM Preflight/de">Vorabkontrolle</a>: F&uuml;hrt vor dem Exportieren nach IFC verschiedene Pr&uuml;fungen am Modell durch.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Draft_AnnotationStyleEditor.svg&amp;filetimestamp=20200513071606&amp;.html" class="mw-file-description"><img src="../File/Draft_AnnotationStyleEditor.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/Draft_AnnotationStyleEditor.html" title="Draft AnnotationStyleEditor/de">Beschriftungsstil-Editor</a>: Erm&ouml;glicht es, Stile zu definieren, die die visuellen Eigenschaften von Beschriftung-&auml;hnlichen Objekten beeinflussen.</li></ul>
 <p><span id="Utils"></span>
@@ -368,13 +366,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115165214
+Cached time: 20260115165232
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.435 seconds
-Real time usage: 0.651 seconds
-Preprocessor visited node count: 876/1000000
+CPU time usage: 0.363 seconds
+Real time usage: 0.527 seconds
+Preprocessor visited node count: 875/1000000
 Post&#8208;expand include size: 24325/2097152 bytes
 Template argument size: 9482/2097152 bytes
 Highest expansion depth: 5/100
@@ -384,18 +382,18 @@ Unstrip post&#8208;expand size: 2105/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.326      1 -total
- 35.65%   14.376      1 Template:BIM_Tools_navi/de
- 17.13%    6.908      1 Template:TOCright
- 14.24%    5.742      2 Template:Navigation_menu_2
- 12.39%    4.997      2 Template:Docnav/de
- 10.24%    4.128      7 Template:VersionPlus/de
-  8.87%    3.576      1 Template:Version/de
-  7.05%    2.844      1 Template:Userdocnavi/de
-  4.44%    1.789      1 Template:MenuCommand
+100.00%   32.716      1 -total
+ 41.76%   13.661      1 Template:BIM_Tools_navi/de
+ 25.49%    8.338      2 Template:Navigation_menu_2
+ 15.08%    4.935      1 Template:Userdocnavi/de
+ 13.33%    4.360      1 Template:Version/de
+  9.68%    3.168      2 Template:Docnav/de
+  6.84%    2.236      7 Template:VersionPlus/de
+  5.46%    1.786      1 Template:TOCright
+  3.84%    1.256      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:181417-0!canonical and timestamp 20260115165213 and revision id 1738843. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:181417-0!canonical and timestamp 20260115165232 and revision id 1738845. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
